--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gzhang.stockscreener">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <service
+        android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+        android:enabled="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
