--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity android:name=".ScreenerActivity">
 
         </activity>
+
+        <activity android:name=".AboutActivity">
+
+        </activity>
     </application>
 
 </manifest>
